Sort out issue of text box alignments.

--- a/web/cobrands/fixmystreet/_base.scss
+++ b/web/cobrands/fixmystreet/_base.scss
@@ -146,14 +146,8 @@ img {
 
 select, input, textarea {
   font-size: 99%;
-  max-width: 95%;
+  max-width: 100%;
 }
-.ie7 {
-    select, input, textarea {
-        max-width: none;
-    }
-}
-
 
 // links
 a,
@@ -246,10 +240,19 @@ input[type=password],
 input[type=email],
 input[type=file],
 textarea {
+  @include box-sizing(border-box);
   width: 100%;
   // adjust so the sides line up
   padding: 0.5em;
-  margin: 0 0 0 -0.5em;
+}
+.ie7 {
+    input[type=text],
+    input[type=password],
+    input[type=email],
+    input[type=file],
+    textarea {
+        max-width: 95%;
+    }
 }
 
 textarea {
@@ -293,7 +296,6 @@ label{
   margin: 0 -2em 0.25em -2em;
   background:#eeeeee;
   padding:1em 2em 1em 2em;
-  max-width:26em;
   >input[type=text] {
     margin-bottom:1em;
   }
@@ -318,6 +320,14 @@ label{
 // it looks okay.
 .ie6 .form-box {
     margin: 0 0 0.25em 0;
+    padding: 1em;
+}
+// Prevent grey displaying oddly by giving it a width, and stop odd left margin issue
+.ie7 .form-box {
+    width: 100%;
+    > input[type=text] {
+        margin-left: 2em;
+    }
 }
 
 .form-txt-submit-box {
